atelier/src/bar/snapshots/atelier__bar__right__tests__counts_and_battery.snap
---
source: src/bar/right.rs
expression: "rendered.join(\"\\n\")"
---
 80 |#[fg=#8caaee,bold]             #[fg=#c6d0f5,bold]09:05#[nobold]  |
 90 |#[fg=#8caaee,bold]          #[fg=#eebebe,nobold]+111 #[fg=#ea999c,nobold]−113 #[fg=#99d1db,nobold]↑2 #[fg=#99d1db,nobold]↓1   #[fg=#c6d0f5,bold]09:05#[nobold]  |
 99 |#[fg=#8caaee,bold]          #[fg=#eebebe,nobold]+111 #[fg=#ea999c,nobold]−113 #[fg=#99d1db,nobold]↑2 #[fg=#99d1db,nobold]↓1   #[fg=#c6d0f5,bold]09:05#[nobold]  |
100 |#[fg=#8caaee,bold]          #[fg=#eebebe,nobold]+111 #[fg=#ea999c,nobold]−113 #[fg=#99d1db,nobold]↑2 #[fg=#99d1db,nobold]↓1    #[fg=#81c8be,nobold]󰂁 87%    #[fg=#c6d0f5,bold]09:05#[nobold]  |
120 |#[fg=#8caaee,bold]          #[fg=#eebebe,nobold]+111 #[fg=#ea999c,nobold]−113 #[fg=#99d1db,nobold]↑2 #[fg=#99d1db,nobold]↓1    #[fg=#81c8be,nobold]󰂁 87%     #[fg=#949cbb,nobold]Tue 04 Aug   #[fg=#c6d0f5,bold]09:05#[nobold]  |
200 |#[fg=#8caaee,bold]          #[fg=#eebebe,nobold]+111 #[fg=#ea999c,nobold]−113 #[fg=#99d1db,nobold]↑2 #[fg=#99d1db,nobold]↓1    #[fg=#81c8be,nobold]󰂁 87%     #[fg=#949cbb,nobold]Tue 04 Aug   #[fg=#c6d0f5,bold]09:05#[nobold]  |
